fix scrolling on mobile LocationsView search results

--- a/src/styles/components/_LocationsView.scss
+++ b/src/styles/components/_LocationsView.scss
@@ -1,8 +1,8 @@
 .LocationsView {
-  height: $desktop-map-height;
   padding-top: $mobile-map-height;
 
   @include media('md') {
+    height: $desktop-map-height;
     padding-top: 0;
   }
 
@@ -21,6 +21,7 @@
   &__search {
     @include media('md') {
       overflow: scroll;
+      height: 100%;
       max-width: 26rem;
     }
   }
